--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "bundle/ctrlp.vim"]
 	path = bundle/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim
+[submodule "bundle/tabnine-vim"]
+	path = bundle/tabnine-vim
+	url = https://github.com/zxqfl/tabnine-vim
